--- a/src/station8.html
+++ b/src/station8.html
@@ -8,13 +8,14 @@
     <title>Station 8</title>
   </head>
   <body>
-    <div id="container">
+    <div class="container">
       <header>ヘッダー</header>
-      <div>アイテム1</div>
-      <div>アイテム2</div>
-      <div>アイテム3</div>
-      <div>アイテム4</div>
-      <footer>フッター</footer>
-    </div>
+      <div class="item">
+        <div id="item1">アイテム1</div>
+        <div>アイテム2</div>
+        <div>アイテム3</div>
+        <div>アイテム4</div>
+        <footer>フッター</footer>
+      </div>
   </body>
 </html>
