--- a/src/station11.html
+++ b/src/station11.html
@@ -9,6 +9,12 @@
   <body>
     <main>
       <form action="" method="post">
+        <label for="email">Email:</label>
+        <input type="email" required id="email"><br>
+        <label for="password">パスワード:</label>
+        <input type="password" minlength=6 required id="password"><br>
+        <label for="nickname">ニックネーム:</label>
+        <input type="text" maxlength=20 id="nickname"><br>
         <button type="submit">送信</button>
       </form>
     </main>
