--- a/src/station8.html
+++ b/src/station8.html
@@ -8,14 +8,12 @@
     <title>Station 8</title>
   </head>
   <body>
-    <div class="container">
+    <div id="container">
       <header>ヘッダー</header>
-      <div class="item">
-        <div id="item1">アイテム1</div>
-        <div>アイテム2</div>
-        <div>アイテム3</div>
-        <div>アイテム4</div>
-        <footer>フッター</footer>
-      </div>
+      <div id="item1">アイテム1</div>
+      <div id="item2">アイテム2</div>
+      <div id="item3">アイテム3</div>
+      <div id="item4">アイテム4</div>
+      <footer>フッター</footer>
   </body>
 </html>
